Bug 65731 - [Dell Precision M4300] Bluetooth LED permanently on
Summary: [Dell Precision M4300] Bluetooth LED permanently on
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Platform_x86 (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_platform_x86@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-25 12:05 UTC by Calum
Modified: 2016-12-19 22:43 UTC (History)
3 users (show)

See Also:
Kernel Version: 3.11
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments

Description Calum 2013-11-25 12:05:19 UTC
Forwarding a bug from Ubuntu: https://bugs.launchpad.net/ubuntu/+source/linux/+bug/1254138

On my Dell Precision M4300 when switching off bluetooth in OS the LED used to also turn off but since 3.5 kernel the LED is stubbornly staying on all the time.

I have identified the commit specific to Dell laptops that broke this and quite coincidentally this same commit was just reverted on next branch only a few days ago. It's not all good however as the companion commits replace a Dell laptop blacklist with a whitelist meaning it currently only works with Latitude models so need to get Precision models also included.

The commit that resulted in this issue was introduced in 3.5 kernel as "dell-laptop: Remove rfkill code"[1]

I have built and tested the linux next branch code with the 'revert' commit [2] and then modified the "Latitude" product string commit [3] to "Precision" and the result is the bluetooth LED is now switching off as it should do when bluetooth is off.

[1] https://git.kernel.org/cgit/linux/kernel/git/stable/linux-stable.git/commit/?id=a6c2390cd6d2083d27a2359658e08f2d3df375ac
[2 ]https://git.kernel.org/cgit/linux/kernel/git/next/linux-next.git/commit/?id=4cc8a57425c623753b10b77b15392e5b83baa5a3
[3] https://git.kernel.org/cgit/linux/kernel/git/next/linux-next.git/commit/?id=2a92551845bbbc8421ba908cd14bbdf065e0f454
Comment 1 Hans de Goede 2013-12-04 19:22:30 UTC
Given that Precision mobile workstations are top of the line Dell products, I would expect the functionality of rfkill there to be about the same as on Latitudes so white-listing Precisions too sounds sane. I'll whip up a patch for this one of the coming days.
Comment 2 Hans de Goede 2013-12-06 14:32:31 UTC
Patch posted to the list: http://www.mail-archive.com/platform-driver-x86@vger.kernel.org/msg04852.html
Comment 3 Szőgyényi Gábor 2016-11-09 19:41:13 UTC
Please try this bug with latest kernel image.

Note You need to log in before you can comment on or make changes to this bug.